Smart UV Project invert the resulting UVs #83084

Closed
opened 2020-11-27 01:51:26 +01:00 by Oliver Villar · 17 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: 2.90.1

Caused by 850234c1b1

Short description of error
When using Smart UV Project, the resulting UVs are inverted in the X axis, compared to resulting UVs from Unwrap.

Exact steps for others to reproduce the error

  1. Create a plane.
  2. Use Smart UV Project.
  3. If a material with a texture is added to the plane, the image will be inverted.

This doesn't happen using Unwrap.

Thanks!

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: 2.90.1 Caused by 850234c1b1 **Short description of error** When using Smart UV Project, the resulting UVs are inverted in the X axis, compared to resulting UVs from Unwrap. **Exact steps for others to reproduce the error** 1. Create a plane. 2. Use Smart UV Project. 3. If a material with a texture is added to the plane, the image will be inverted. This doesn't happen using Unwrap. Thanks!
Author

Added subscriber: @OliverVillar

Added subscriber: @OliverVillar

#84573 was marked as duplicate of this issue

#84573 was marked as duplicate of this issue

Added subscriber: @MarcFree3D

Added subscriber: @MarcFree3D

I have exactly the same problem. If use Smart UV project the texture image is inverted. But if I use Unwrap it works fine.

I have exactly the same problem. If use Smart UV project the texture image is inverted. But if I use Unwrap it works fine.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Not sure if there is really a "right" or "wrong" here?

If you compare Unwrap to Smart UV to the generated default UVs then they all have a different orientation.

Not sure if there is really a "right" or "wrong" here? If you compare `Unwrap` to `Smart UV` to the `generated default` UVs then they **all** have a different orientation.
Author

I would understand a difference in orientation, but this is not the problem. They show inverted, as in -1 scale in the X axis. A simple texture won't seem problematic, but if the texture includes a text, the text will be "reflected". The resulting UVs have to be scaled in X -1 to be fixed.

I would understand a difference in orientation, but this is not the problem. They show inverted, as in -1 scale in the X axis. A simple texture won't seem problematic, but if the texture includes a text, the text will be "reflected". The resulting UVs have to be scaled in X -1 to be fixed.

And the question is: if I Scale in X-1 when this are fixed all of the textures stay inverted?

The inversion may be not clear in a normal texture, but if the texture contains text it's very clear .

image.png this is inverted using smart uv project. Similar to look a book in front of mirror

image.png and if you use simply unwrap this is the result, works fine, and text isn't inverted

I think this two images can shed light to the question

And the question is: if I Scale in X-1 when this are fixed all of the textures stay inverted? The inversion may be not clear in a normal texture, but if the texture contains text it's very clear . ![image.png](https://archive.blender.org/developer/F9405033/image.png) *this is inverted using smart uv project. Similar to look a book in front of mirror* ![image.png](https://archive.blender.org/developer/F9405044/image.png) *and if you use simply unwrap this is the result, works fine, and text isn't inverted* I think this two images can shed light to the question

Added subscriber: @iss

Added subscriber: @iss

This is regression from 2.90.1. When I flip normals in 2.92, I get same result as 2.90.1

This is regression from 2.90.1. When I flip normals in 2.92, I get same result as 2.90.1

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @leric8925

Added subscriber: @leric8925
Philipp Oeser self-assigned this 2021-01-12 17:54:06 +01:00
Member

OK, get it now, caused by 850234c1b1

OK, get it now, caused by 850234c1b1
Member

Dare setting this to High prio, since it is a regression

Dare setting this to High prio, since it is a regression

This issue was referenced by 20c71ca5d9

This issue was referenced by 20c71ca5d9f942e7596aa5016b50ad5efd047fe5

This issue was referenced by 5d99199880

This issue was referenced by 5d9919988009b158cd918b402d29fc516ad47e35

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83084
No description provided.