Fix T83084: Smart UV Project inverts the resulting UVs

Caused by 850234c1b10a828678f1b91001f2731db807f7e2,

Flip the normal to avoid flipped projection.